--- a/app/Resources/views/employer/index.html.twig
+++ b/app/Resources/views/employer/index.html.twig
@@ -1,22 +1,16 @@
 {% include 'default/header.html.twig' %}
 
     {# CONTENT-WRAPPER SECTION START #}
-        <div class="container" style="width:400px;">
+        <div class="container" style="width:800px;">
             <div class="row">
                 <div class="col-md-12">
-                    <h4 class="page-head-line">Please Login To Enter </h4>
+                    <h4 class="page-head-line">Employer Admin Panel </h4>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
-                   <h4> Login with <strong>Zontal Account  :</strong></h4>
-                   <br />
-                   <label>Enter Email ID : </label>
-                   <input type="text" class="form-control" />
-                   <label>Enter Password :  </label>
-                   <input type="password" class="form-control" />
-                   <hr />
-                   <a href="index.html" class="btn btn-info"><span class="glyphicon glyphicon-user"></span> &nbsp;Log Me In </a>&nbsp;
+                   <h4> Welcome To Empolyer Admin Panel</h4>
+                    
                </div>
            </div>
        </div>
